--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,7 @@
     package="com.example.newsapi">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission
-        android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -13,6 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewsAPI">
+        <activity
+            android:parentActivityName=".MainActivity"
+            android:name=".roomDBRecyclerActivity"
+            android:exported="false"
+            android:label="@string/title_activity_room_dbrecycler"
+            android:theme="@style/Theme.NewsAPI.NoActionBar" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
